ecommerce/templates/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
  - port: 5002
    targetPort: 5002
