ecommerce/templates/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: product-service

  ports:
  - port: 5001
    targetPort: 5001
