ecommerce/templates/user-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service
  namespace: ecommerce

spec:
  selector:
    app: user-service

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
